--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rogue"
 version = "0.1.0"
-authors = ["Ivan Bodrov <ibodrov@jet.msk.su>"]
+authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
 
 [profile.release]
 debug = true
