--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,7 @@ debug = true
 
 [dependencies]
 sfml = "*"
-gfx = "*"
-gfx_window_glutin = "*"
-gfx_device_gl = "*"
-glutin = "*"
+glium = "*"
 cgmath = "*"
 time = "*"
 rand = "*"
