--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-name = "rogue"
+name = "ui"
 version = "0.1.0"
 authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
 
-[profile.release]
-debug = true
+[dependencies]
+glium = "*"
+cgmath = "*"
+time = "*"
 
 [dependencies.world]
-path = "world"
-version = "0.1.0"
-
-[dependencies.ui]
-path = "ui"
+path = "../world"
 version = "0.1.0"
