--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
 glium = "*"
 cgmath = "*"
 time = "*"
+image = "*"
 
 [dependencies.world]
 path = "../world"
