--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ debug = true
 path = "world"
 version = "0.1.0"
 
+[dependencies.tex_atlas]
+path = "tex_atlas"
+version = "0.1.0"
+
 [dependencies.ui]
 path = "ui"
 version = "0.1.0"
