--- a/world/Cargo.toml
+++ b/world/Cargo.toml
@@ -4,9 +4,5 @@ version = "0.1.0"
 authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
 
 [dependencies]
-rand = "*"
-time = "*"
-
-[dependencies.ecs]
-path = "../ecs"
-version = "0.1.0"
+specs = "*"
+chan = "*"
