--- a/assets/ui.toml
+++ b/assets/ui.toml
@@ -1,6 +1,7 @@
 [map]
-atlas="assets/atlas.toml"
+atlas="assets/atlas_ascii.toml"
+visible_tile_size=[8, 10]
 
 [map.tiles]
-dwarf = { tile = 1,  fg = [255, 255, 255, 255] }
-grass = { tile = 46, fg = [0,   128, 0,   255] }
+dwarf = { tile = 1,  fg = [255, 100,   0, 255] }
+grass = { tile = 46, fg = [  0, 100,   0, 255] }
