--- a/tex_atlas/Cargo.toml
+++ b/tex_atlas/Cargo.toml
@@ -8,3 +8,11 @@ glium = "*"
 image = "*"
 toml = "*"
 log = "*"
+
+[dependencies.clippy]
+version = "*"
+optional = true
+
+[features]
+default = []
+dev = ["clippy"]
