--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -18,3 +18,11 @@ version = "0.1.0"
 [dependencies.tex_atlas]
 path = "../tex_atlas"
 version = "0.1.0"
+
+[dependencies.clippy]
+version = "*"
+optional = true
+
+[features]
+default = []
+dev = ["clippy"]
