--- a/world/Cargo.toml
+++ b/world/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
 
 [dependencies]
 specs = "*"
-chan = "*"
 time = "*"
+log = "*"
 
 [dependencies.clippy]
 version = "*"
