make ui's visible_tile_size optional, simple map loading from a cvs file, disable smoothing for good

--- a/assets/ui.toml
+++ b/assets/ui.toml
@@ -1,6 +1,6 @@
 [map]
-atlas="assets/atlas_ascii.toml"
-visible_tile_size=[8, 10]
+atlas="assets/atlas_aesomatica.toml"
+#visible_tile_size=[64, 64]
 
 [map.tiles]
 dwarf = { tile = 1,   fg = [255, 100,   0, 255] }
