move cfg parsing into the separate crate, switch to json

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
 [dependencies]
 env_logger = "*"
 
+[dependencies.cfg]
+path = "cfg"
+version = "0.1.0"
+
 [dependencies.tex_atlas]
 path = "tex_atlas"
 version = "0.1.0"
